k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vehicle-store
  labels:
    name: vehicle-store
    app: vehicle-store-api
